--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.5.2",
     "classnames": "^2.3.2",
     "next": "14.0.2",
+    "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "zod": "3.22.2"
   },
   "devDependencies": {
     "@types/node": "^20",
